tests/fail/no_replace_ident.rs
concat_idents::concat_idents!( = no, _replace {
    fn fn_name() {
        /* there must be a replace char */
    }
});

fn main() {}
