tests/fail/no_replace_ident.stderr
error: expected identifier
 --> $DIR/no_replace_ident.rs:1:32
  |
1 | concat_idents::concat_idents!( = no, _replace {
  |                                ^
